@@ -1,3 +1,15 @@
+Sun Jul 24 07:40:19 2005  Gan Deng  <dengg@dre.vanderbilt.edu>
+
+	* DAnCE/Plan_Launcher/Plan_Launcher.cpp
+
+	  Enhanced error output information a little bit by
+	  adding process ID and thread ID.
+
+	* DAnCE/ciao/Container_Impl.cpp
+
+	  Fixed exception emulation warnings in Debian_Full_Reactor
+	  build.
+
 Sun Jul 24 01:19:21 2005  Gan Deng  <dengg@dre.vanderbilt.edu>
 
 	* DAnCE/Plan_Launcher/Plan_Launcher.cpp
